package Interfaces;

import Models.Floor;
import Models.Passenger;

public interface IBuilding {
    public void updateQueue(Passenger passenger);
}
