package Models;

public enum PassengerState {
    Spawned,
    Waiting,
    Moving,
    Leaving,
    Left,
    Entering
}
