@startuml ElevatorSystem


interface IBuilding
{
    +{abstract} updateQueue(Passenger passenger): void
}
class Building
{
    -floors: Floor[]
    -elevators: Elevator[]
    -passengersQueue: Passenger[]
    +runAllThreads(): void
}

class Elevator
{
    -maxWeight: double
    -moveStrategy: ElevatorStrategy
    -currentPassengers: Passenger[]
    -currentFloor: Floor
    +run(): void
    +stop(Floor floor): void
    +openDoors(): void
    +closeDoors(): void
    +canEnter(int): boolean
}

interface IElevatorStrategy
{
    +{abstract} move(): void
    -{abstract} getFloorQueue(): Passenger[]
}

abstract BaseStrategy 
{
    #elevator: Elevator 
    #floorQueue: Passenger[] 
    -getFloorQueue(): Passenger[]
}

class DummStrategy  
{
    -isEmptyLocker: Object
    +move(): void
}

class KindStrategy  
{
    -isEmptyLocker: Object
    +move(): void
}


class Floor 
{
    -passengerList: Passenger[]
    -floorHeight: double
    +ElevatorArrived(Elevator elevator): void
    +getNextPassengerPosition(): double
}

enum PassengerState
{
    Spawned
    Waiting
    Moving
    Leaving
    Left
    Entering
}

class Passenger
{
    -weight: double
    -state: PassengerState
    -image: Image
    -sourceFloor: int
    -strategy: PassengerBrain
    -x: double
    -y: double
    +leaveElevator(Elevator): void
    +enterElevator(Elevator): void
}

class PassengerFactory
{
    -maxWeight: int
    -minWeight: int
    -maxCountOfFloors: int
    -passengerList: Passengers[]
    -createNewPassanger(): Passanger
    -updatePassanger(): Passanger
    -createRandomPassanger(): Passanger
    +getPassangers(): Passanger[]
}

IBuilding <|-- Building
Passenger <.. PassengerFactory
PassengerState *-- Passenger
Passenger <-- Floor
Passenger <-- Elevator
Floor o-- Building
Elevator o-- Building
IElevatorStrategy o-- Elevator
IElevatorStrategy <|.. BaseStrategy
BaseStrategy <|-- DummStrategy
BaseStrategy <|-- KindStrategy

@enduml